<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include
        android:id="@+id/include_content"
        layout="@layout/content_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_height"
        android:layout_gravity="end|bottom"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/port_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/port_add"
                style="@style/btn_green_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:layout_weight="1"
                android:text="@string/port_add"></Button>

            <Button
                android:id="@+id/port_delete"
                style="@style/btn_red_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:layout_weight="1"
                android:text="@string/port_delete"></Button>

        </LinearLayout>

        <Button
            android:id="@+id/start_find_router"
            style="@style/btn_green_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:text="@string/start_find_router"></Button>


    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
